# inmoov_ros

./: LICENSE  README.md
inmoov_control/: CMakeLists.txt  README.md  package.xml
inmoov_control/config/: inmoov_control.yaml
inmoov_control/launch/: finger_mimic.launch  inmoov_control.launch
inmoov_control/nodes/: fingermimic.py  fingermimic.py~
inmoov_description/: CMakeLists.txt  README.md  package.xml  regen_inmoov_urdf.sh  rviz.launch  urdf_regen.sh
inmoov_description/config/: no_collision.py  urdf_regen.sh
inmoov_description/launch/: rviz.launch  rviz_no_collision.launch
inmoov_description/robots/: inmoov.urdf  inmoov.urdf.xacro  inmoov.xacro  inmoov_no_collision.urdf  inmoov_no_collision.urdf.xacro
inmoov_description/urdf/: asmArm.urdf.xacro  asmFace.urdf.xacro  asmHand.urdf.xacro  asmHead.urdf.xacro  asmTorso.urdf.xacro  contact_sensors.gazebo  emr_sensors.gazebo  leftHand.urdf.xacro  materials.gazebo  rightHand.urdf.xacro  sensors.gazebo  servos.urdf.xacro
inmoov_description/urdf/default/: asmArm.urdf.xacro  asmFace.urdf.xacro  leftHand.urdf.xacro  rightHand.urdf.xacro
inmoov_description/urdf/no_collisions/: asmArm.urdf.xacro  asmBase.urdf.xacro  asmFace.urdf.xacro  asmHead.urdf.xacro  asmTorso.urdf.xacro  leftHand.urdf.xacro  rightHand.urdf.xacro
inmoov_gazebo/: CMakeLists.txt  README.md  package.xml
inmoov_gazebo/launch/: inmoov_moveit_sim.launch  inmoov_no_collision_world.launch  inmoov_world.launch
inmoov_gazebo/worlds/: inmoov.world
inmoov_meshes/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
inmoov_moveit/: .setup_assistant  package.xml
inmoov_moveit/config/: controllers.yaml  fake_controllers.yaml  inmoov.srdf  joint_limits.yaml  ompl_planning.yaml  sensors_kinect.yaml
inmoov_moveit/launch/: inmoov_moveit_controller_manager.launch.xml  inmoov_moveit_sensor_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planner.launch  moveit_planning_execution.launch  planning_context.launch  (+2 more)
(+1 files in other folders)
