<?xml version="1.0"?>

<package>
  <name>inmoov_gazebo</name>
  <version>0.0.0</version>
  <description>The inmoov_gazebo package</description>

  <maintainer email="verbrymr@mail.uc.edu">Matthew Verbryke</maintainer>

  <license>BSD-3</license>

  <!--<url>...<url>-->

  <author email="verbrymr@mail.uc.edu">Matthew Verbryke</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
